Fix z-index of esper header for full frame windows.

--- a/src/stylesheets/components/_esper.scss
+++ b/src/stylesheets/components/_esper.scss
@@ -19,6 +19,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    z-index: $zindex-esper-header;
 
     .toolbar {
       box-sizing: content-box;
